0.02
 - Fix LICENSE file.

0.01 2014-06-05T18:18:25+02:00
 - First version.