@@ -1,5 +1,6 @@
 0.02
  - Fix LICENSE file.
+ - Update Module::Install to 1.10 version.
 
 0.01 2014-06-05T18:18:25+02:00
  - First version.
